# litter

./: .gitignore  AGENTS.md  PLAN-follow-up-pass-upstream-merge-validation.md  PLAN-rename-litter-to-shitter.md  PLAN-upstream-merge-2026-03-17.md  Package.swift  README.md  realtime_resume_session.md
.github/workflows/: android-apk-release.yml  android.yml  ios-testflight.yml  ios.yml
apps/android/: README.md  build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/docs/: qa-matrix.md  release-automation.md
apps/android/scripts/: download-bundled-assets.sh  play-upload.sh  rebuild-and-reopen.sh  run-remote-debug.sh
apps/ios/: Snapfile  project.yml
apps/ios/Shitter.xcodeproj/: project.pbxproj
apps/ios/fastlane/: snapshot_report_devices_patch.rb  snapshot_runtime_version_patch.rb
apps/ios/scripts/: build-rust.sh  download-ios-system.sh  ios-clangxx-wrapper.sh  regenerate-project.sh  sanitize-ios-frameworks.sh  sync-codex.sh  testflight-setup.sh  testflight-upload.sh
docs/: dev-setup-progress.md  ios-iphone17pro-screenshots.md  ios-signing-status.md
docs/architecture/: ios-android-monorepo-migration-plan.md
docs/ios/: quickstart.md
docs/releases/: android-play-internal-checklist.md  ios-testflight-checklist.md  testflight-whats-new.md
docs/releases/export-compliance/: README.md
patches/codex/: client-controlled-handoff.patch  ios-exec-hook.patch  realtime-transcript-deltas.patch
services/push-proxy/: package-lock.json  package.json  wrangler.toml
services/push-proxy/src/: apns.ts  crypto.ts  fcm.ts  (+4 more)
shared/rust-bridge/codex-bridge/: Cargo.toml
shared/rust-bridge/codex-bridge/include/: codex_bridge.h
shared/rust-bridge/codex-bridge/src/: aec.rs  android_jni.rs  ios_exec.rs  lib.rs
tools/scripts/: README.md  deploy-android-ondevice.sh  switch-app-identity.sh
(+272 files in other folders)
